# KT-Transcriber

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  commit_msg.txt  pyproject.toml  start-services.bat
.claude/: settings.json  settings.local.json
.claude/skills-feedback/: README.md  audit-project.md  document-project.md  migrate-analyze.md  migrate-api.md  migrate-domain.md  migrate-infra.md  migrate-tests.md  migration-map-kt-transcriber.md  migration-plan-kt-transcriber.md
.claude/skills/audit-pair/: skill.md
.claude/skills/audit-project/: skill.md
.claude/skills/document-project/: skill.md
.claude/skills/migrate-analyze/: skill.md
.claude/skills/migrate-api/: skill.md
.claude/skills/migrate-domain/: skill.md
.claude/skills/migrate-infra/: skill.md
.claude/skills/migrate-tests/: SKILL.md
docs/: FLOW.md  REFERENCE.md  STRUCTURE.md  WHERE_WAS_I.md
scripts/: CLAUDE.md  app.py  auto_init.py  run_full_pipeline.py  run_select_pipeline.py
src/: CLAUDE.md  __init__.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  health.py  kt_indexing_router.py  kt_ingestion_router.py  kt_pipeline_router.py  kt_search_router.py
src/api/schemas/: __init__.py  kt_schemas.py
src/config/: __init__.py  settings.py  startup.py
src/db/: __init__.py
src/helpers/: __init__.py  kt_helpers.py
src/kt_indexing/: __init__.py  chromadb_store.py  file_generator.py  indexing_engine.py  kt_indexing_constants.py  kt_indexing_utils.py  llm_metadata_extractor.py  text_chunker.py  video_normalizer.py
src/kt_ingestion/: __init__.py  json_consolidator.py  kt_ingestion_constants.py  smart_processor.py  tldv_client.py
src/kt_search/: __init__.py  chromadb_search_executor.py  chunk_selector.py  dynamic_client_manager.py  insight_processors.py  insights_agent.py  insights_prompts.py  kt_search_constants.py  query_classifier.py  query_enricher.py  query_type_detector.py  search_cli.py  search_engine.py  search_formatters.py  search_logging.py  search_response_builder.py  search_types.py  search_utils.py
src/services/: __init__.py  kt_indexing_service.py  kt_ingestion_service.py  kt_search_service.py  llm_service.py
src/tasks/: __init__.py  arq_worker.py  kt_indexing_task.py  kt_ingestion_task.py  kt_search_task.py  kt_selective_pipeline_task.py
tests/: CLAUDE.md  conftest.py  test_e2e.py  test_insight_processors.py  test_insights_prompts.py  test_kt_indexing.py  test_kt_ingestion.py  test_kt_search.py  test_kt_search_pipeline.py  test_query_type_detector.py  test_search_cli.py  test_search_formatters.py  test_search_logging.py  test_search_response_builder.py  test_smoke.py
utils/: CLAUDE.md  dpt2_extractor.py  exception_setup.py  hash_manager.py  llm_manager.py  logger_setup.py  pdfplumber_extractor.py  string_helpers.py  wordcom_toolkit.py
