[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kt-transcriber"
version = "2.0.0"
description = "Sistema de transcrição e busca semântica de sessões KT via TL:DV + ChromaDB + FastAPI + ARQ"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
dependencies = [
    # ══════════════════════════════════════════════════════════════════════════════
    # Data & Validation
    # ══════════════════════════════════════════════════════════════════════════════
    "pydantic==2.12.5",
    "jsonschema==4.26.0",
    "orjson==3.11.5",
    # ══════════════════════════════════════════════════════════════════════════════
    # Web Framework (FastAPI ecosystem)
    # ══════════════════════════════════════════════════════════════════════════════
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-multipart==0.0.21",
    # ══════════════════════════════════════════════════════════════════════════════
    # Job Queue (ARQ - Async Redis Queue)
    # ══════════════════════════════════════════════════════════════════════════════
    "arq==0.26.3",
    "redis==5.3.1",
    # ══════════════════════════════════════════════════════════════════════════════
    # Database & Cache
    # ══════════════════════════════════════════════════════════════════════════════
    "SQLAlchemy==2.0.45",
    "diskcache==5.6.3",
    # ══════════════════════════════════════════════════════════════════════════════
    # HTTP Clients
    # ══════════════════════════════════════════════════════════════════════════════
    "requests==2.32.5",
    "httpx==0.28.1",
    # ══════════════════════════════════════════════════════════════════════════════
    # Utilities
    # ══════════════════════════════════════════════════════════════════════════════
    "python-dotenv==1.2.1",
    "rich==14.2.0",
    "typer==0.21.1",
    "tenacity==9.1.2",
    "backoff==2.2.1",
    "tqdm==4.67.1",
    "coloredlogs==15.0.1",
    "psutil==7.2.1",
    "PyYAML==6.0.3",
    "Jinja2==3.1.6",
    # ══════════════════════════════════════════════════════════════════════════════
    # AI & LLM
    # ══════════════════════════════════════════════════════════════════════════════
    "openai==2.23.0",
    "langchain-core==1.2.15",
    "langchain-openai==1.1.10",
    # ══════════════════════════════════════════════════════════════════════════════
    # Vector Database
    # ══════════════════════════════════════════════════════════════════════════════
    "chromadb==1.5.1",
    # ══════════════════════════════════════════════════════════════════════════════
    # Dashboard (Streamlit)
    # ══════════════════════════════════════════════════════════════════════════════
    "streamlit==1.54.0",
    # ══════════════════════════════════════════════════════════════════════════════
    # Browser Automation
    # ══════════════════════════════════════════════════════════════════════════════
    "playwright==1.52.0",
    # ══════════════════════════════════════════════════════════════════════════════
    # Async I/O & Date Utilities
    # ══════════════════════════════════════════════════════════════════════════════
    "aiofiles==25.1.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
src = [".", "tests"]
target-version = "py312"
line-length = 120
exclude = [".git", ".venv", "__pycache__", "build", "dist", "**/__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["B008"]  # Allows Depends() in function defaults (FastAPI pattern)
exclude = [".git", ".venv", "__pycache__", "build", "dist", "**/__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
files = ["src", "utils", "scripts"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
cache_dir = ".mypy_cache"
exclude = '(?x)(^\.venv/|^tests/|^data/|^build/|^dist/|(.*/)?__init__\.py$)'

# ══════════════════════════════════════════════════════════════════════════════
# Mypy Overrides (Configuração por Projeto)
# ══════════════════════════════════════════════════════════════════════════════
# Use overrides APENAS quando:
#   1. Biblioteca externa SEM stubs disponíveis (ex: biblioteca proprietária)
#   2. Código legado sem type hints que NÃO pode ser refatorado agora
#   3. Bibliotecas com stubs incompletos causando falsos positivos
#
# EXEMPLO - Biblioteca sem stubs:
#   [[tool.mypy.overrides]]
#   module = "minha_lib_interna.*"
#   ignore_missing_imports = true
#
# EXEMPLO - Módulo legado do projeto:
#   [[tool.mypy.overrides]]
#   module = "src.legacy_module"
#   disallow_untyped_defs = false
#
# NÃO use overrides como desculpa para evitar type hints — adicione tipos!
# ══════════════════════════════════════════════════════════════════════════════

# Overrides para utilitários opcionais em utils/ (dependências não instaladas por padrão)
[[tool.mypy.overrides]]
module = "win32com.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_google_genai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "utils.wordcom_toolkit"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "utils.llm_manager"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiofiles.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["."]

addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
]

markers = [
    "slow: Testes que precisam de infra externa (Redis/ARQ/LLM/etc)",
    "smoke: Stack deve estar rodando (Redis Cloud, ARQ) — requer .env configurado",
    "e2e: Fluxo completo com stack completa (FastAPI + Redis + ARQ)",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "coverage==7.13.1",
    "mypy==1.19.1",
    "ruff==0.14.13",
    "pre-commit==4.5.1",
    "ipython==9.9.0",
    "types-psutil==7.2.1.20260116",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20260107",
]
